--- a/act.html
+++ b/act.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Mushroom</title>
 </head>
 <body>
 
-<h1>Mushroom</h1>
-<p>Hi I'm mushroom.</p>
+<h1>Hi.</h1>
+<p>I'm mushroom.</p>
 </body>
 </html>
