--- a/act.html
+++ b/act.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mushroom</title>
+<title>Page Title</title>
 </head>
 <body>
 
-<h1>Hi.</h1>
-<p>I'm mushroom.</p>
+<h1>Mushroom</h1>
+<p>My first paragraph.</p>
+  
 </body>
 </html>
