--- a/act.html
+++ b/act.html
@@ -8,6 +8,8 @@
 <h1>Mushroom</h1>
 <p>My first paragraph.</p>
 
-  <h2>I am Hello Kitty.</h2>
+<h2>I am Hello Kitty.</h2>
+<p>My second paragraph.</p>
+  
 </body>
 </html>
