--- a/act.html
+++ b/act.html
@@ -5,16 +5,8 @@
 </head>
 <body>
 
-<h1>Mushroom</h1>
+<h1>Mushroom is good for health. It is an antioxidant and makes your body strong.</h1>
 <p>My first paragraph.</p>
-
-<h2>I am Hello Kitty.</h2>
-<p>Paragraph 2: This is paragraph 2.</p>
-  <pre>
-    One
-     Two
-      Three
-  </pre>
   
 </body>
 </html>
