--- a/act.html
+++ b/act.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 
+<p>Mushroom</p>
 <h1>Mushroom is good for health. It is an antioxidant and makes your body strong.</h1>
-<p>My first paragraph.</p>
+
+<p>Banana</p>
+<h2>Many of us still have no idea that banana provides potassium in our body.</h2>
   
 </body>
 </html>
