--- a/act.html
+++ b/act.html
@@ -7,6 +7,8 @@
 
 <p>Mushroom</p>
 <h1>Mushroom is good for health. It is an antioxidant and makes your body strong.</h1>
-  
+
+<p>Hi</p>
+<h2>I'm Hello Kitty.</h2>
 </body>
 </html>
